@@ -21,6 +21,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Supplier;
@@ -28,8 +29,6 @@ import java.util.function.Supplier;
 import javax.jcr.Credentials;
 import javax.jcr.SimpleCredentials;
 import javax.security.auth.login.LoginException;
-
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 
 import org.jetbrains.annotations.NotNull;
 
@@ -75,7 +74,7 @@ public class TestIdentityProvider implements ExternalIdentityProvider {
         addUser(new TestUser(ID_SECOND_USER, getName())
                 .withProperty("profile/name", "Second User")
                 .withProperty("age", 24)
-                .withProperty("col", ImmutableList.of("v1", "v2", "v3"))
+                .withProperty("col", List.of("v1", "v2", "v3"))
                 .withProperty("boolArr", new Boolean[]{true, false})
                 .withProperty("charArr", new char[]{'t', 'o', 'b'})
                 .withProperty("byteArr", new byte[0])
@@ -283,7 +282,7 @@ public class TestIdentityProvider implements ExternalIdentityProvider {
         @NotNull
         @Override
         public Iterable<ExternalIdentityRef> getDeclaredMembers() {
-            return ImmutableList.of();
+            return List.of();
         }
     }
 
