@@ -16,18 +16,16 @@
  */
 package org.apache.jackrabbit.oak.security.authorization.composite;
 
-import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import javax.jcr.Session;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.api.JackrabbitSession;
 import org.apache.jackrabbit.oak.api.Tree;
 import org.apache.jackrabbit.oak.commons.PathUtils;
-import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
+import org.apache.jackrabbit.oak.commons.collections.SetUtils;
 import org.apache.jackrabbit.oak.plugins.tree.TreeLocation;
 import org.apache.jackrabbit.oak.spi.security.authorization.permission.AggregatedPermissionProvider;
 import org.apache.jackrabbit.oak.spi.security.authorization.permission.Permissions;
@@ -72,7 +70,7 @@ import static org.junit.Assert.assertTrue;
  */
 public class CompositeProviderScopeTest extends AbstractCompositeProviderTest {
 
-    private static List<String> PATH_OUTSIDE_SCOPE = ImmutableList.of(ROOT_PATH, TEST_PATH, TEST_CHILD_PATH);
+    private static List<String> PATH_OUTSIDE_SCOPE = List.of(ROOT_PATH, TEST_PATH, TEST_CHILD_PATH);
 
     private CompositePermissionProvider cppTestUser;
     private CompositePermissionProvider cppAdminUser;
@@ -288,7 +286,7 @@ public class CompositeProviderScopeTest extends AbstractCompositeProviderTest {
             String[] actions = defActionsGranted.get(p);
 
             if (testProvider.isSupported(p)) {
-                Set<String> expected = CollectionUtils.toSet(actions);
+                Set<String> expected = SetUtils.toSet(actions);
                 expected.removeAll(denied);
 
                 boolean canSetProperty = TreeLocation.create(readOnlyRoot, p).getProperty() != null;
