@@ -16,17 +16,17 @@
  */
 package org.apache.jackrabbit.oak.security.privilege;
 
+import java.util.List;
 import java.util.Set;
 import javax.jcr.security.Privilege;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.api.security.authorization.PrivilegeManager;
 import org.apache.jackrabbit.oak.AbstractSecurityTest;
 import org.apache.jackrabbit.oak.api.Root;
 import org.apache.jackrabbit.oak.api.Tree;
 import org.apache.jackrabbit.oak.api.Type;
 import org.apache.jackrabbit.oak.commons.PathUtils;
-import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
+import org.apache.jackrabbit.oak.commons.collections.SetUtils;
 import org.apache.jackrabbit.oak.spi.state.NodeState;
 import org.junit.After;
 import org.junit.Before;
@@ -67,7 +67,7 @@ public class JcrAllCommitHookTest extends AbstractSecurityTest {
     @Test
     public void testJcrAll() throws Exception {
         Privilege all = privilegeManager.getPrivilege(JCR_ALL);
-        Set<Privilege> aggregates = CollectionUtils.toSet(all.getDeclaredAggregatePrivileges());
+        Set<Privilege> aggregates = SetUtils.toSet(all.getDeclaredAggregatePrivileges());
 
         assertTrue(aggregates.contains(newPrivilege));
     }
@@ -107,7 +107,7 @@ public class JcrAllCommitHookTest extends AbstractSecurityTest {
         Root r = adminSession.getLatestRoot();
         Tree t = r.getTree(PRIVILEGES_PATH);
         Tree jcrAll = t.getChild(JCR_ALL);
-        jcrAll.setProperty(REP_AGGREGATES, ImmutableList.of("newPriv"), Type.NAMES);
+        jcrAll.setProperty(REP_AGGREGATES, List.of("newPriv"), Type.NAMES);
         t.addChild("newPriv");
         NodeState after = getTreeProvider().asNodeState(r.getTree(PathUtils.ROOT_PATH));
         hook.processCommit(before, after, null);
